@@ -20,9 +20,4 @@
 #cmakedefine HAVE_LCMS1_H @HAVE_LCMS1_H@
 #cmakedefine HAVE_LCMS2_H @HAVE_LCMS2_H@
 
-#cmakedefine CMAKE_WORDS_BIGENDIAN
-#ifdef CMAKE_WORDS_BIGENDIAN
-        #define OPJ_BIG_ENDIAN 
-#else
-        #define OPJ_LITTLE_ENDIAN 
-#endif
+#cmakedefine OPJ_BIG_ENDIAN @CMAKE_WORDS_BIGENDIAN@
